# PETSIM

./: CMakeLists.txt  Dung.mac  PETDetectorConstructionLargerDetectors.cc  PETDetectorConstructionMicro+.cc  PETDetectorConstructionMonolithic_Crystals_and_Detectors_11-19.cc  PETDetectorConstruction_Micro_Case.cc  PETDetectorConstruction_monolithic_first_geometry_overhaul_7-19.cc  PETDetectorConstruction_pixelCryst_monoDet_12-19.cc  PETmain.cc  README.md  geom.in  gui.mac  vis.mac
Documentation/Analysis Programs/: DOI.py  DOIResolution.py  EnergyResolution.py  Gamma_Production.py  NthPhotTime.py  NthPosRes.py  Photon_timing.py  PosRes.py  SRTimeDifferences.py  Seperator_Eff.py  TimeDifferences.py  TimeRes.py  TimeResSingleTrigger.py  copyNumberHeatMap.py  frontvsback.py  photHitsPositions.py  photonScatter.py  trackingPhotons.py
include/: PETActionInitialization.hh  PETDetectorConstruction.hh  PETDetectorMessenger.hh  PETEventAction.hh  PETPhysicsList.hh  PETPrimaryGeneratorAction.hh  PETRunAction.hh  PETStackingAction.hh  PETSteppingAction.hh  PETTrackerHit.hh  PETTrackerSD.hh  PETTrackingAction.hh  PETUserEventInformation.hh
src/: PETActionInitialization.cc  PETDetectorConstruction.cc  PETDetectorMessenger.cc  PETEventAction.cc  PETPhysicsList.cc  PETPrimaryGeneratorAction.cc  PETRunAction.cc  PETStackingAction.cc  PETSteppingAction.cc  PETTrackerHit.cc  PETTrackerSD.cc
